// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressCard tests should match with snapshot with onPress 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "marginBottom": 31,
      "opacity": 1,
      "paddingBottom": 31,
      "paddingLeft": 31,
      "paddingRight": 31,
      "paddingTop": 31,
    }
  }
>
  <Text
    fontWeight="semiBold"
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_600SemiBold",
          "fontSize": 31,
        },
        {
          "fontSize": 31,
          "marginBottom": 31,
        },
      ]
    }
  >
    Some address title
  </Text>
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "fontSize": 24,
        },
      ]
    }
  >
    12345
  </Text>
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "fontSize": 24,
        },
      ]
    }
  >
    San Francisco
  </Text>
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "fontSize": 24,
        },
      ]
    }
  >
    California
  </Text>
</View>
`;

exports[`AddressCard tests should match with snapshot without onPress 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "marginBottom": 31,
      "opacity": 1,
      "paddingBottom": 31,
      "paddingLeft": 31,
      "paddingRight": 31,
      "paddingTop": 31,
    }
  }
>
  <Text
    fontWeight="semiBold"
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_600SemiBold",
          "fontSize": 31,
        },
        {
          "fontSize": 31,
          "marginBottom": 31,
        },
      ]
    }
  >
    Some address title
  </Text>
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "fontSize": 24,
        },
      ]
    }
  >
    12345
  </Text>
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "fontSize": 24,
        },
      ]
    }
  >
    San Francisco
  </Text>
  <Text
    style={
      [
        {
          "color": "#0D0D0D",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 31,
        },
        {
          "fontSize": 24,
        },
      ]
    }
  >
    California
  </Text>
</View>
`;
